# summa-model-specific

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
data/: outputControl.txt
docs/: conf.py
src/summaflow/: __about__.py  __init__.py  _default_dicts.py  core.py  geospatial.py  logging_config.py  utils.py
src/summaflow/cli/: __init__.py  main.py
src/summaflow/data/: README
src/summaflow/templates/: SUMMA_file_manager_template.jinja  SUMMA_model_decisions_template.jinja  SUMMA_model_decisions_template.jinja2
tests/notebooks/: summaflow_allinone.ipynb
tests/notebooks/forcings/: Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201101.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201102.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201103.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201104.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201105.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201106.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201107.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201108.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201109.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201110.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201111.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201112.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201201.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201202.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201203.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201204.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201205.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201206.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201207.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201208.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201209.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201210.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201211.nc  Bow_at_Banff_ERA5_remapped_domain_Bow_at_Banff_ERA5_merged_201212.nc
tests/notebooks/jinja2-templates/: parameter_templating.ipynb
tests/notebooks/test-stats/merit-hydro/: summaflow_elv.tif.aux.xml  summaflow_stats_elv.csv
tests/notebooks/test-stats/usda-soil/: summaflow_soil_classes.tif.aux.xml
tests/notebooks/tests/: land-cover-mapping.ipynb  stats_geolayer_tests.ipynb  summaflow_allinone.ipynb  summaflow_test.ipynb  summaflow_test_attrs_forcing_coldstate.ipynb  summaflow_test_forcing.ipynb  test_constructors.ipynb  test_geolayer.ipynb
