[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summaflow"
dynamic = ["version"]
description = 'Model-specific workflow to configure SUMMA hydrological model'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Kasra Farmer", email = "kasra.keshavarz1@ucalgary.ca" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Kasra Farmer/summaflow#readme"
Issues = "https://github.com/Kasra Farmer/summaflow/issues"
Source = "https://github.com/Kasra Farmer/summaflow"

[tool.hatch.version]
path = "src/summaflow/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/summaflow tests}"

[tool.coverage.run]
source_pkgs = ["summaflow", "tests"]
branch = true
parallel = true
omit = [
  "src/summaflow/__about__.py",
]

[tool.coverage.paths]
summaflow = ["src/summaflow", "*/summaflow/src/summaflow"]
tests = ["tests", "*/summaflow/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
